--- a/ChangeSkinAndSound/ChangeSkin.csproj
+++ b/ChangeSkinAndSound/ChangeSkin.csproj
@@ -24,7 +24,7 @@
 		<PackageReference Include="BepInEx.AssemblyPublicizer.MSBuild" Version="0.4.2" PrivateAssets="all" />
 		<PackageReference Include="UnityEngine.Modules" Version="2022.3.18" IncludeAssets="compile" />
 
-		<Reference Include="Assembly-CSharp" Publicize="true" >
+		<Reference Include="Assembly-CSharp" Publicize="true">
 			<HintPath>$(GameAssembliesDir)/Assembly-CSharp.dll</HintPath>
 		</Reference>
 
@@ -40,10 +40,18 @@
 			<HintPath>$(BepInExDir)/plugins/ScavLib/ScavLib.dll</HintPath>
 		</Reference>
 
+		<Content Include="Textures\**"> 
+			<CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory> 
+		</Content>
+
 	</ItemGroup>
 
 	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
 		<PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <Folder Include="Textures/*.*" />
 	</ItemGroup>
 
 	<PropertyGroup>
@@ -53,6 +61,9 @@
 			ScavLib.dll;
 			ScavLib.pdb;
 		</RequiredFilesToCopy>
+		<RequiredFoldersToCopy>
+			Textures;
+		</RequiredFoldersToCopy>
 	</PropertyGroup>
 
 	<Target Name="CopyOutputDllsToPluginsFolder" Condition="'$(Configuration)'=='DEBUG'" AfterTargets="AfterBuild">
@@ -61,5 +72,13 @@
 			<Output TaskParameter="CombinedPaths" ItemName="RequiredFilesToCopy_Combined" />
 		</CombinePath>
 		<Copy SourceFiles="@(RequiredFilesToCopy_Combined)" DestinationFolder="$(BepInExDir)/plugins/$(PluginDirName)" />
+	</Target>
+
+	<Target Name="CopyFoldersToPluginsFolder" Condition="'$(Configuration)'=='DEBUG'" AfterTargets="AfterBuild">
+		<ItemGroup>
+			<RequiredFolders Include="$(RequiredFoldersToCopy.Split(';'))" />
+			<FilesToCopy Include="%(RequiredFolders.Identity)\**\*" />
+		</ItemGroup>
+		<Copy SourceFiles="@(FilesToCopy)" DestinationFiles="@(FilesToCopy->'$(BepInExDir)/plugins/$(PluginDirName)/%(Identity)')" />
 	</Target>
 </Project>
