--- a/ChangeSkin/ChangeSkin.csproj
+++ b/ChangeSkin/ChangeSkin.csproj
@@ -13,6 +13,7 @@
 			https://nuget.samboy.dev/v3/index.json
 		</RestoreAdditionalProjectSources>
 		<RootNamespace>ChangeSkin</RootNamespace>
+		<Platforms>AnyCPU;x64;x86</Platforms>
 	</PropertyGroup>
 
 	<Import Project="../vars.targets" />
