--- a/.github/workflows/Release.yml
+++ b/.github/workflows/Release.yml
@@ -6,6 +6,10 @@ name: Release
 on: 
   workflow_dispatch:
     inputs:
+      game_version:
+        description: 'To what version of the game are you releasing it?'
+        required: true
+        type: string
       version:
         description: 'Release version (e.g., v1.0.0):'
         required: true
@@ -56,6 +60,10 @@ jobs:
         path: ${{ env.GAME_NAME }}
 
   build:
+    permissions: 
+      contents: write
+      issues: write
+      pull-requests: write
     needs: setup
     strategy:
       fail-fast: false
@@ -86,10 +94,14 @@ jobs:
     - name: Create Release for 
       run: |
         Compress-Archive -Path ${{ env.MODS_PATH }}\* -DestinationPath ".\${{ env.MOD_NAME }}-${{ matrix.platform }}.zip"
-        gh release create ${{ github.event.inputs.version }} 
-        gh release upload ${{ github.event.inputs.version }} .\${{ env.MOD_NAME }}-${{ matrix.platform }}.zip
-        gh release edit ${{ github.event.inputs.version }} -n ${{ github.event.inputs.release_notes }}
+        gh release create "${{ github.event.inputs.version }}.gv${{ github.event.inputs.game_version }}" \
+              --notes="${{ github.event.inputs.release_notes }}" \
+              --title="${{ github.event.inputs.version }}.gv${{ github.event.inputs.game_version }}"
+        gh release upload \
+              "${{ github.event.inputs.version }}.gv${{ github.event.inputs.game_version }}" \
+              .\${{ env.MOD_NAME }}-${{ matrix.platform }}.zip
         if ('${{ github.event.inputs.is_draft }}' -eq 'true') {gh release edit ${{ github.event.inputs.version }} --draft}
         if ('${{ github.event.inputs.is_prerelease }}' -eq 'true') {gh release edit ${{ github.event.inputs.version }} --prerelease}
+      
       env:
-        GH_TOKEN: ${{ github.token }}
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
