--- a/.github/workflows/Test.yml
+++ b/.github/workflows/Test.yml
@@ -7,7 +7,7 @@ on: [workflow_dispatch, push, pull_request]
 
 env:
   GAME_FILE: "14472058"
-  GAME_NAME: "CasualtiesUnknownDemo"
+  GAME_NAME: "CasualtiesUnknown"
   MOD_NAME: "ChangeSkin"
 
 jobs:
