--- a/ChangeSkin/ChangeSkin.csproj
+++ b/ChangeSkin/ChangeSkin.csproj
@@ -29,6 +29,7 @@
     />
     <PackageReference Include="UnityEngine.Modules" Version="2022.3.18" IncludeAssets="compile" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.4" IncludeAssets="compile" />
+    <PackageReference Include="System.Net.Http" Version="4.3.4" />
 
     <Reference Include="Assembly-CSharp" Publicize="true">
       <HintPath>$(GameAssembliesDir)/Assembly-CSharp.dll</HintPath>
@@ -43,19 +44,19 @@
     </Reference>
 
     <Reference Include="KrokoshaCasualtiesMP" Publicize="true">
-      <HintPath>./KrokoshaCasualtiesMP.dll</HintPath>
+      <HintPath>redist/KrokoshaCasualtiesMP.dll</HintPath>
     </Reference>
 
-    <Reference Include="Unity.Netcode.Components" Publicize="true">
-      <HintPath>./Unity.Netcode.Components.dll</HintPath>
+    <Reference Include="Unity.Netcode.Components">
+      <HintPath>redist/Unity.Netcode.Components.dll</HintPath>
     </Reference>
 
-    <Reference Include="Unity.Netcode.Runtime" Publicize="true">
-      <HintPath>./Unity.Netcode.Runtime.dll</HintPath>
+    <Reference Include="Unity.Netcode.Runtime">
+      <HintPath>redist/Unity.Netcode.Runtime.dll</HintPath>
     </Reference>
 
-    <Reference Include="Unity.Networking.Transport" Publicize="true">
-      <HintPath>./Unity.Networking.Transport.dll</HintPath>
+    <Reference Include="Unity.Networking.Transport">
+      <HintPath>redist/Unity.Networking.Transport.dll</HintPath>
     </Reference>
   </ItemGroup>
 
